--- a/museum.html
+++ b/museum.html
@@ -67,7 +67,8 @@
           light and airy, with most factory machinery housed on the ground floor
           and the three upper floors originally used to wither the freshly
           plucked tea-leaves.
-        </p>
+        </p><br>
+        <a class="button button1" href="ticket.html" target="_blank">Book a ticket</a><br>
       </div>
       <img class="polaroid" src="Image/img_09.webp" alt="Home page" />
     </div>
@@ -138,6 +139,11 @@
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
+
+
+    
+
+
       <footer>
         <div class="copyright_text">
           <p>Copyright ©2022 <a href="#">Anumm Irshad</a> All rights reserved</p>
